--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/drone_feeder?useSSL=false&createDatabaseIfNotExist=TRUE&unicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/drone_feeder?createDatabaseIfNotExist=TRUE&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
